--- a/src/styles/sass/games/math-quest.scss
+++ b/src/styles/sass/games/math-quest.scss
@@ -12,6 +12,7 @@
   .#{$identifier}-main {
     @media (max-width: 480px) {
       flex-direction: column-reverse;
+      row-gap: 20px;
 
       .#{$identifier}-score-wrapper {
         width: calc(100% - 80px);
